# rudeshipping

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.md  THANKS  configure  configure.ac
src/: AbstractImplementation.cpp  AbstractImplementation.h  Address.cpp  Address.h  AllProvider.cpp  AllProvider.h  Implementation.cpp  Implementation.h  Package.cpp  Package.h  Provider.cpp  Provider.h  Service.cpp  Service.h  packagemaker.cpp  packagemaker.h  shipping.cpp  shipping.h
src/calculators/: UPSCalculator.cpp  UPSCalculator.h  USPSDomesticCalculator.cpp  USPSDomesticCalculator.h
src/services/: ItalyDomestic3Day.cpp  ItalyDomestic3Day.h  ItalyDomesticDHL.cpp  ItalyDomesticDHL.h  ItalyInternational3Day.cpp  ItalyInternational3Day.h  ItalyInternationalDHL.cpp  ItalyInternationalDHL.h  PickUp.cpp  PickUp.h  UPS2ndDayAir.cpp  UPS2ndDayAir.h  UPS3DaySelect.cpp  UPS3DaySelect.h  UPSExpressSaver.cpp  UPSExpressSaver.h  UPSGround.cpp  UPSGround.h  UPSNextDayAir.cpp  UPSNextDayAir.h  UPSStandard.cpp  UPSStandard.h  UPSWorldwideExpedited.cpp  UPSWorldwideExpedited.h  UPSWorldwideExpress.cpp  UPSWorldwideExpress.h  USPSDomesticExpress.cpp  USPSDomesticExpress.h  USPSDomesticParcelPost.cpp  USPSDomesticParcelPost.h  USPSDomesticPriority.cpp  USPSDomesticPriority.h
src/utility/: LiveRateRequest.cpp  LiveRateRequest.h  UPSCodeToUSPSCountry.cpp  UPSCodeToUSPSCountry.h  URLEncoder.cpp  URLEncoder.h  USPSPackageSizeFinder.cpp  USPSPackageSizeFinder.h
